--- a/src/styles/Popupstye/Pricepop.css
+++ b/src/styles/Popupstye/Pricepop.css
@@ -253,20 +253,6 @@
     /* background-color: red; */
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .updatesavcon
 {
     height: 8%;
@@ -275,4 +261,269 @@
     justify-content: center;
     width: 100%;
     /* background-color: rosybrown; */
+}
+
+
+
+
+/* ------------POP UP 4-------------- */
+
+
+
+.Discountpopto
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    background-color: #FFFFFF;
+    
+}
+
+
+.disouthead
+{
+    display: flex;
+    height: 7%;
+    width: 95%;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+
+.wholediscount
+{
+    height: 93%;
+    width: 100%;
+    align-items: center;
+    display: flex;
+}
+
+
+.wholeleft
+{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wholeleftin
+{
+    height: 93%;
+    width: 93%;
+}
+
+.wholeright
+{
+    width: 50%;
+    height: 93%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.wholerightin
+{
+    height: 90%;
+    width: 93%;
+    background-color: #F8F9FB;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.removbutcon
+{
+    height: 11%;
+    width: 93%;
+}
+
+.imagecont
+{
+    height: 30%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imagecontin
+{
+    width: 100%;
+    display: flex;
+    gap: 2%;
+    height: 100%;
+}
+
+.imageleft
+{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.imagertight
+{
+    display: grid;
+    gap: 10px;
+    width: 50%;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+}
+
+
+
+
+.imageconee
+{
+    height: 17%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.imagedishe
+{
+    display: flex;
+    gap: 10px;
+}
+
+.discoute
+{
+    font-size: 16px;
+    color: #091B29;
+    font-weight: bold;
+}
+
+.handbodone
+{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.handbodone div
+{
+    
+    font-size: 14px;
+    font-weight: 600;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+
+.wholerighed
+{
+    font-size: 14px;
+    font-weight: bold;
+    color: #091B29;
+    height: 7%;
+    display: flex;
+    align-items: center;
+}
+
+
+.removecomitem
+{
+    height: 93%;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.scrolremcon
+{
+    height: 90%;
+    width: 100%;
+    overflow-y: scroll;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    scrollbar-width: none;
+}
+
+.removitdiv
+{
+    min-height: 12%;
+    display: flex;
+    justify-content: space-between;
+    width: 98%;
+    color: #4E5A6B;
+    align-items: center;
+    border-bottom: 1px solid #E4E8EE;
+    font-weight: bold;
+}
+
+.remoddelico
+{
+    display: flex;
+    gap: 10px;
+    justify-content: space-evenly;
+    width: 26%;
+    /* background-color: red; */
+}
+
+.removbutcon
+{
+    display: flex;
+    align-items: end;
+}
+
+.removefinal
+{
+    height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #E4E8EE;
+    border-radius: 4px;
+    
+}
+
+.removefinal div
+{
+    width: 25%;
+    color: #091B29;
+    font-weight: bold;
+    text-align: center;
+    /* background-color: red; */
+}
+
+
+
+
+
+.discdrop
+{
+    justify-content: end;
+    display: flex;
+    font-weight: normal;
+    width: 50%;
+}
+
+.discdrop div
+{
+    border: 1px solid #E4E8EE;
+    width: 25%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
 }
