--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,33 @@
-body
-{
+body {
   margin: 0;
-  
+
   padding: 0;
 }
 
-.App
-{
+.App {
   height: 100vh;
   width: 100vw;
-  font-family: 'Nunito Sans' !important;
+  font-family: "Nunito Sans" !important;
   background-color: aqua;
 }
 
-.Mainhead
-{
+.Mainhead {
   height: 7%;
   width: 100%;
 }
 
-.Mainbody
-{
+.Mainbody {
   height: 93%;
   width: 100%;
   display: flex;
 }
 
-
-.MainSide
-{
+.MainSide {
   width: 5%;
   height: 100%;
 }
 
-.MainSpa
-{
+.MainSpa {
   width: 100%;
   height: 100%;
 }
