--- a/src/styles/Head.css
+++ b/src/styles/Head.css
@@ -1,103 +1,90 @@
-.HeaderBox
-{
-    width: 100%;
-    height: 100%;
-    background-color: #1C1C1C;
-    color: #FFFFFF;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.HeaderBox {
+  width: 100%;
+  height: 100%;
+  background-color: #1c1c1c;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.aligence
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+.aligence {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
-.logodetails
-{
-    display: flex;
-    width: 27%;
-    /* background-color: pink; */
-    justify-content: space-evenly; 
-    font-size: 12px;
-    align-items: center;
-    height: 100%;
+.logodetails {
+  display: flex;
+  width: 27%;
+  /* background-color: pink; */
+  justify-content: space-evenly;
+  font-size: 12px;
+  align-items: center;
+  height: 100%;
 }
 
-.logobox
-{
-    height: 60%;
-    width: 40%;
-    /* background-color: pink; */
+.logobox {
+  height: 60%;
+  width: 40%;
+  /* background-color: pink; */
 }
 
-
-.siginbox
-{
-    width: 15%;
-    align-items: center;
-    height: 100%;
-    justify-content: space-between;
-    display: flex;
-    /* background-color: pink; */
+.siginbox {
+  width: 15%;
+  align-items: center;
+  height: 100%;
+  justify-content: space-between;
+  display: flex;
+  /* background-color: pink; */
 }
 
-.login
-{
-    align-items: center;
-    justify-content: space-around;
-    display: flex;
-    width: 70%;
-    height: 100%;
-    /* background-color: red; */
-    
+.login {
+  align-items: center;
+  justify-content: space-around;
+  display: flex;
+  width: 70%;
+  height: 100%;
+  /* background-color: red; */
 }
 
-.badge
-{
-    height: 100%;
-    width: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* background-color: aqua; */
+.badge {
+  height: 100%;
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: aqua; */
 }
 
-.SearchBoxcontainer
-{
-    width: 58%;
-    /* background-color: rebeccapurple; */
-    align-items: center;
-    display: flex;
-    justify-content: flex-start;
-    height: 100%;
+.SearchBoxcontainer {
+  width: 58%;
+  /* background-color: rebeccapurple; */
+  align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  height: 100%;
 }
 
-.search
-{
-    display: flex;
-    background-color: #5D5D5D;
-    border-radius: 4px;
-    margin-left: 15%;
-    height: 60%;
-    width: 40%;  
+.search {
+  display: flex;
+  background-color: #5d5d5d;
+  border-radius: 4px;
+  margin-left: 15%;
+  height: 60%;
+  width: 40%;
 }
 
-.search input{
-    outline: none;
-    border: none;
-    height: 100%;
-    width: 100%;
-    background-color: transparent; 
+.search input {
+  outline: none;
+  border: none;
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
 }
 
-
-.search  ::placeholder{
-    
-    color: #CED3DD;
-    font-size: 12px;
+.search ::placeholder {
+  color: #ced3dd;
+  font-size: 12px;
 }
