--- a/src/styles/Popupstye/Pricepop.css
+++ b/src/styles/Popupstye/Pricepop.css
@@ -42,7 +42,7 @@
 .pricepopdiv
 {
     width: 100%;
-    height: 15%;
+    height: 13%;
     display: flex;
     border-radius: 6px;
     background-color: #DBF0F180;
@@ -526,4 +526,246 @@
     align-items: center;
 
 
+}
+
+
+
+
+
+
+.innerpopcon
+{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    /* align-items: center;  */
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center;  */
+}
+
+.innerpoptie
+{
+    height: 13%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 92%;
+}
+
+
+.inpoptibox
+{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 60%;
+    border-radius: 6px;
+}
+
+.inpoptibox div{
+    width: 50%;
+    display: flex;
+}
+
+.inputcont
+{
+    width: 92%;
+    height: 70%;
+}
+
+.reventycon
+{
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+   justify-content: center;
+    width: 100%;
+    background-color: aliceblue;
+}
+.toglgepopcon
+{
+    height: 50%;
+    display: flex;
+    gap: 10px;
+
+}
+
+.toglgepopcon div
+{
+    border: 1px solid #E4E8EE;
+    border-radius: 4px;
+    display: grid;
+    place-items: center;
+    height: 90%;
+    width: 15%;
+    /* height: 0%; */
+}
+
+.toogletopla
+{
+    color: #98A0AC;
+    height: 25%;
+    font-size: 12px;
+}
+
+.twodopdoncon
+{
+    display: flex;
+    height: 20%;
+    width: 100%;
+    background-color: cornflowerblue;
+}
+
+.twodopdoncon div
+{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: wheat;
+}
+
+
+
+
+
+
+
+
+.RevenueType{
+    color: #98A0AC;
+    font-size: 12px;
+    font-weight: 600;
+    margin-top: 20px;
+  }
+  
+  .category-tabs {
+    display: flex;
+    margin-top: 10px;
+    gap: 10px;
+  }
+  
+  .category-tabs Button {
+    height: 40px;
+    border: 1px solid #b7b7b8;
+    padding: 2px 10px;
+    background-color: #fdfdfd;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    color: #4E5A6B;
+    transition: background-color 0.3s;
+  }
+  
+  .category-tabs button.active {
+    background-color: #5078E1;
+    color: #fdfdfd;
+  }
+  
+  .category-tabs button:not(.active):hover {
+    background-color: #f2f5ff;
+  }
+  
+  .category-tabs button:focus {
+    outline: none;
+  }
+  
+  .col{
+    width: 50%;
+    color: #98A0AC;
+    font-size: 12px;
+    font-weight: 600;
+    margin-top: 15px;
+  }
+
+  .biginput
+  {
+    width: 100%;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 18%;
+  }
+
+
+  .biginput div
+  {
+    height: 50%;
+    
+  }
+
+
+  .inputbig
+  {
+    display: flex;
+    width: 99%;
+    height: 50%;
+    border: 1px solid #E4E8EE;
+    border-radius: 4px; 
+  }
+
+  .inputbd
+  {
+    
+    background: transparent;
+    border: none;
+    height: 85%;
+    color: #000;
+    margin-left: 20px;
+    font-weight: 500;
+    width: 100%;
+  }
+  
+
+  .inputbd:focus
+  {
+    outline: none;
+    border: none;
+  }
+
+  .buton4div
+  {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 20%;
+  }
+
+
+
+
+.progescont
+{
+    height: 15%;
+    display:flex;
+    width: 92%;
+    margin-top: 10px;
+    /* background-color: red; */
+}
+
+
+
+
+
+
+
+  .tooltip-text {
+  visibility: visible;
+  width: 220px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  top: -50px; /* Show above the icon */
+  right: 0;
+  opacity: 0.9;
+  font-size: 12px;
 }
