--- a/src/styles/Popupstye/Pricepop.css
+++ b/src/styles/Popupstye/Pricepop.css
@@ -128,15 +128,18 @@
   display: flex;
   font-size: 16px;
   width: 65%;
-  justify-content: space-evenly;
+  justify-content: start;
   height: 100%;
+  gap: 20px;
+  margin-left: 12px;
   align-items: center;
 }
 
 .amubanpri {
   height: 100%;
   font-weight: bold;
-  width: 25%;
+  width: 18%;
+  
   /* background-color: red; */
   justify-content: start;
   align-items: center;
@@ -147,6 +150,7 @@
   width: 100%;
   height: 5%;
   display: flex;
+  margin:2% 0;
   align-items: center;
   justify-content: start;
   color: #98a0ac;
@@ -154,11 +158,9 @@
 }
 
 .tooglecon {
-  height: 75%;
+  height: 70%;
   width: 100%;
   overflow-y: scroll;
-  display: flex;
-  flex-direction: column;
   gap: 10px;
   scrollbar-width: none;
   /* background-color: pink; */
@@ -170,6 +172,8 @@
   border-radius: 6px;
   display: flex;
   gap: 10px;
+  height: 60px;
+  margin-bottom: 12px;
   align-items: center;
 }
 
@@ -306,23 +310,23 @@
 
 .imageleft {
   height: 100%;
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 49%;
 }
 
-.imagertight {
-  display: grid;
-  gap: 10px;
-  width: 50%;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
+.imagertight { 
+  gap: 7px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 49%;
 }
 
 .imageconee {
-  height: 17%;
+  height: 18%;
+  
+  margin-top: 2%;
   width: 100%;
+  /* background-color: red; */
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -360,11 +364,13 @@
   font-weight: bold;
   color: #091b29;
   height: 7%;
+  margin-left: 11px;
   display: flex;
   align-items: center;
 }
 
 .removecomitem {
+  /* background-color: red; */
   height: 93%;
   justify-content: space-between;
   align-items: center;
@@ -373,7 +379,7 @@
 }
 
 .scrolremcon {
-  height: 90%;
+  height: 100%;
   width: 100%;
   overflow-y: scroll;
   align-items: center;
@@ -383,10 +389,11 @@
 }
 
 .removitdiv {
-  min-height: 12%;
+  min-height: 19%;
   display: flex;
   justify-content: space-between;
-  width: 98%;
+  width: 95%;
+  padding: 10px;
   color: #4e5a6b;
   align-items: center;
   border-bottom: 1px solid #e4e8ee;
@@ -396,7 +403,7 @@
 .remoddelico {
   display: flex;
   gap: 10px;
-  justify-content: space-evenly;
+  justify-content: end;
   width: 26%;
   /* background-color: red; */
 }
@@ -408,7 +415,7 @@
 
 .removefinal {
   height: 10%;
-  width: 100%;
+  width: 95%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -468,7 +475,7 @@
 }
 
 .inpoptibox div {
-  width: 50%;
+  /* width: 50%; */
   display: flex;
 }
 
@@ -574,7 +581,6 @@
   margin-top: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   height: 18%;
 }
 
@@ -614,11 +620,10 @@
 }
 
 .progescont {
-  height: 15%;
+  height: 20%;
   display: flex;
   width: 92%;
   margin-top: 10px;
-  /* background-color: red; */
 }
 
 .tooltip-text {
