--- a/src/styles/MainSpace.css
+++ b/src/styles/MainSpace.css
@@ -22,7 +22,8 @@
 .MainContainer {
   background-color: #ffffff;
   box-shadow: 0px 0px 12px #00000014;
-  height: 96%;
+  height: 93%;
+  margin-top:15px;
   width: 96%;
   border-radius: 12px;
 }
